# scCS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: api.rst  changelog.rst  conf.py  index.rst  introduction.rst  requirements.rst  scCS_tutorial.ipynb  scCS_tutorial_pairwise_comparison.ipynb  scCS_tutorial_single_condition.ipynb
scCS/: __init__.py  bifurcation.py  drivers.py  embedding.py  enrichment.py  multiconditional.py  plot.py  scores.py  trajectory.py
tests/: test_scores.py
