[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scCS-py"
version = "0.5.0"
description = "Single-cell Commitment Scores with radial star embedding for k-furcation fate decisions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Emil Kriukov"}
]
keywords = ["single-cell", "RNA velocity", "commitment scores", "fate decision", "scRNA-seq"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "anndata>=0.9",
    "scanpy>=1.9",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
velocity = ["scvelo>=0.2.5"]
enrichment = ["gseapy>=1.0"]
all = ["scvelo>=0.2.5", "gseapy>=1.0", "cellrank>=2.0"]
docs = ["sphinx>=7", "sphinx-autoapi>=3", "furo", "nbsphinx", "ipykernel"]
dev = ["pytest", "pytest-cov", "black", "ruff", "flake8", "sphinx>=7", "sphinx-autoapi>=3", "furo", "nbsphinx", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scCS*"]

[tool.setuptools.package-data]
scCS = ["py.typed"]
